fix: fix filter shadow on smaller devices

--- a/index.css
+++ b/index.css
@@ -186,7 +186,8 @@ small span {
 
 .figure {
   position: relative;
-  filter: drop-shadow(0px 24px 48px rgba(0, 0, 0, 0.15));
+  -webkit-filter: drop-shadow(0px 24px 48px rgba(0, 0, 0, 0.35));
+  filter: drop-shadow(0px 24px 48px rgba(0, 0, 0, 0.35));
 }
 
 .img {
